toggler aligned with hamburger, working correctly

--- a/src/style.css
+++ b/src/style.css
@@ -293,7 +293,7 @@ i {
     
 }
 
-.fa {
+/* .fa {
     color: #DEC79B;
     font-size: 200px;
     height: 40px;
@@ -305,7 +305,7 @@ i.fa-bars {
     padding: 20px;
     float: right;
     margin-right: 15px;
-}
+} */
 
 .what-i-learned {
     background-color: #4C4C4C;
@@ -356,9 +356,11 @@ figcaption {
     right: 0;
     z-index: 2;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     opacity: 0;
+    /* padding: 2em; */
+    margin: 2em;
 }
 
 .menu-wrap .hamburger {
@@ -368,19 +370,17 @@ figcaption {
     z-index: 1;
     width: 60px;
     height: 60px;
-    padding: 1rem;
-    background-color: white;
+    padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
 }
 
 /* hamburger line */
 .menu-wrap .hamburger > div {
     position: relative;
     width: 100%;
-    height: 2px;
+    height: 4px;
     background-color: #DEC79B; /* edit this */
     display: flex;
     align-items: center;
@@ -394,15 +394,15 @@ figcaption {
    content: '';
    position: absolute;
    z-index: 1;
-   top: -10px;
+   top: -15px;
    width: 100%;
-   height: 2px;
+   height: 4px;
    background: inherit;
 }
 
 /* moves line down */
 .menu-wrap .hamburger > div:after {
-    top: 10px;
+    top: 15px;
 }
 
 /* toggler animate */
